# axisem4specfem

./: .gitignore  CMakeLists.txt  make_axisem.macros  make_axisem.macros_release.TEMPLATE
EXAMPLES/AK135_50s/: inparam_advanced  inparam_basic  inparam_source  param_post_processing  run.sh
MESHER/: CMakeLists.txt  ak135.smooth.bm  fort.1001  inparam_mesh  model_discontinuities.f90  submit.csh
MESHER/smooth_model/: ak135.smooth.bm  libgll.py  main.py  model.py  prem.smooth.bm  prem.txt  sem_mesh.py  smooth.py  specfem_tomo_interp.py
SOLVER/: CMTSOLUTION  CMakeLists.txt  inparam_source  inparam_source.bak  mesh_params.h  pthread.c  run_all_events.sh  source.f90  submit.csh  time_evol_wave.F90  xfield_transform  xpost_processing
SOLVER/CMT_DIR/: CMTSOLUTION_SKS_1  CMTSOLUTION_SKS_10  CMTSOLUTION_SKS_11  CMTSOLUTION_SKS_12  CMTSOLUTION_SKS_13  CMTSOLUTION_SKS_14  CMTSOLUTION_SKS_15  CMTSOLUTION_SKS_2  CMTSOLUTION_SKS_3  CMTSOLUTION_SKS_4  CMTSOLUTION_SKS_5  CMTSOLUTION_SKS_6  CMTSOLUTION_SKS_7  CMTSOLUTION_SKS_8  CMTSOLUTION_SKS_9  STATIONS_SKS_1  STATIONS_SKS_10  STATIONS_SKS_11  STATIONS_SKS_12  STATIONS_SKS_13  STATIONS_SKS_14  STATIONS_SKS_15  STATIONS_SKS_2  STATIONS_SKS_3  STATIONS_SKS_4  STATIONS_SKS_5  STATIONS_SKS_6  STATIONS_SKS_7  STATIONS_SKS_8  STATIONS_SKS_9  injection_time  sources.dat.sks
SOLVER/UTILS/: CMakeLists.txt
SOLVER/ak135_50s/: xfield_transform  xpost_processing
SOLVER/ak135_50s/Data_Postprocessing/: OUTPUT_postprocessing  googleearth_src_rec_seis.kml  plot_recs.plot
SOLVER/ak135_50s/MXX_P_MYY/: Mesh  OUTPUT_MXX_P_MYY  axisem  inparam_basic  inparam_source  runinfo  simulation.info  timestamp0001.txt  timestamp0002.txt  timestamp0004.txt  timestamp0008.txt  timestamp0013.txt  timestamp0014.txt  timestamp0016.txt  timestamp0027.txt  timestamp0036.txt  timestamp0037.txt  timestamp0041.txt  timestamp0042.txt  timestamp0045.txt  timestamp0048.txt  timestamp0050.txt  timestamp0051.txt  timestamp0063.txt  timestamp0064.txt  timestamp0067.txt  timestamp0068.txt  timestamp0070.txt  timestamp0080.txt  timestamp0089.txt  timestamp0090.txt  timestamp0091.txt  timestamp0095.txt  timestamp0096.txt
SOLVER/ak135_50s/MXX_P_MYY/Code/: parameters.F90  utlity.f90
SOLVER/ak135_50s/MXX_P_MYY/Data/: axisem_output.nc4  axisem_output.nc4_fem.xdmf  disp_s.xdmf
SOLVER/ak135_50s/MXX_P_MYY/Info/: src_rec_rotated_.kml
SOLVER/ak135_50s/MXY_MXX_M_MYY/: OUTPUT_MXY_MXX_M_MYY  inparam_source  simulation.info  timestamp0003.txt  timestamp0006.txt  timestamp0007.txt  timestamp0015.txt  timestamp0024.txt  timestamp0033.txt  timestamp0034.txt  timestamp0038.txt  timestamp0040.txt  timestamp0043.txt  timestamp0044.txt  timestamp0046.txt  timestamp0047.txt  timestamp0054.txt  timestamp0065.txt  timestamp0074.txt  timestamp0076.txt  timestamp0078.txt  timestamp0081.txt  timestamp0084.txt  timestamp0093.txt  timestamp0098.txt  timestamp0099.txt
SOLVER/ak135_50s/MXY_MXX_M_MYY/Data/: axisem_output.nc4  axisem_output.nc4_mp.xdmf  axisem_output.nc4_mp_vect.xdmf  disp_p.xdmf
SOLVER/ak135_50s/MXZ_MYZ/: OUTPUT_MXZ_MYZ  STATIONS  inparam_advanced  inparam_source  simulation.info  timestamp0005.txt  timestamp0010.txt  timestamp0011.txt  timestamp0012.txt  timestamp0017.txt  timestamp0018.txt  timestamp0020.txt  timestamp0028.txt  timestamp0030.txt  timestamp0039.txt  timestamp0056.txt  timestamp0058.txt  timestamp0059.txt  timestamp0060.txt  timestamp0066.txt  timestamp0069.txt  timestamp0072.txt  timestamp0079.txt  timestamp0087.txt  timestamp0088.txt  timestamp0092.txt  timestamp0094.txt
SOLVER/ak135_50s/MXZ_MYZ/Data/: axisem_output.nc4
SOLVER/ak135_50s/MXZ_MYZ/Info/: src_rec_original.kml  src_rec_rotated_.kml
SOLVER/ak135_50s/MZZ/: OUTPUT_MZZ  inparam_source  simulation.info  timestamp0009.txt  timestamp0019.txt  timestamp0021.txt  timestamp0022.txt  timestamp0023.txt  timestamp0025.txt  timestamp0026.txt  timestamp0029.txt  timestamp0031.txt  timestamp0032.txt  timestamp0035.txt  timestamp0049.txt  timestamp0052.txt  timestamp0053.txt  timestamp0055.txt  timestamp0057.txt  timestamp0061.txt  timestamp0062.txt  timestamp0071.txt  timestamp0073.txt  timestamp0075.txt  timestamp0077.txt  timestamp0082.txt  timestamp0083.txt  timestamp0085.txt  timestamp0086.txt  timestamp0097.txt  timestamp0100.txt
SOLVER/ak135_50s/MZZ/Code/: data_io.f90
SOLVER/ak135_50s/MZZ/Data/: axisem_output.nc4  axisem_output.nc4_sem.xdmf  disp_z.xdmf
SOLVER/ak135_50s/MZZ/Info/: src_rec_original.kml
